[workspace]
members = [
    "io",
    "raw-vaas"
]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Wormhole Labs"]
license = "Apache-2.0"
homepage = "https://github.com/wormholelabs-xyz/wormhole-sdk-rs"
repository = "https://github.com/wormholelabs-xyz/wormhole-sdk-rs"
rust-version = "1.75"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace.dependencies]
alloy-primitives = "0.7.7"
cfg-if = "1.0"
hex-literal = "0.4"
ruint = { version = "1.12", default-features = false }
serde = "1.0"
serde_json = "1.0"
