[package]
name = "wormhole-io"
description = "Wormhole Message Payload Serialization and Deserialization"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
alloy = ["dep:alloy-primitives"]

[dependencies]
alloy-primitives = { workspace = true, optional = true }

[dev-dependencies]
hex-literal.workspace = true

[metadata.docs.rs]
workspace = true