[package]
name = "wormhole-raw-vaas"
description = "Zero-copy deserialization of Wormhole VAAs"
readme = "README.md"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
ruint = ["dep:ruint"]

[dependencies]
ruint = { workspace = true, optional = true }

[dev-dependencies]
hex-literal.workspace = true

[package.metadata.docs.rs]
workspace = true